# caux-simulator

./: .gitignore  AGENTS.md  AGENT_PROMPT.md  ARCHITECTURE.md  BACKLASH_PLAN.md  CHANGELOG.md  DEVELOPER_MANUAL.md  LOGGING.md  LOGGING_QUICK.md  README.md  REFACTORING_PLAN.md  STATUS.md  SYNC_PLAN.md  USER_MANUAL.md  config.example.toml  pyproject.toml  run_session.py  test_power_responses.py
.github/workflows/: publish.yml
caux_simulator/: config.default.toml  nse_telescope.py
scripts/: release.sh
src/: config.default.toml  nse_simulator.py  nse_telescope.py  nse_tui.py  web_console.py
src/bus/: mount.py  utils.py
src/caux_simulator/: config.default.toml  nse_simulator.py  nse_telescope.py  nse_tui.py  web_console.py
src/caux_simulator/bus/: aux_bus.py  mount.py  utils.py
src/caux_simulator/devices/: base.py  generic.py  (+5 more)
src/devices/: motor.py  power.py  wifi.py
tests/: integration_scan.py  test_basic.py  test_connectivity_regression.py
tests/debug/: test_cmd_31_fix.py  test_extensive.py  test_full_sky_safari.py  test_logging.py  test_wifi_handlers.py  verify_coords.py
tests/integration/: test_motion.py
tests/protocol/: test_backlash.py  test_comprehensive.py  test_connectivity_regression.py  test_device_selectivity.py  test_exact_sequence.py  test_extensive.py  test_final_verification.py  test_goto_completion.py  test_new_fixes.py  test_selective_behavior.py  test_selective_response.py  test_sync.py  test_time_sync_logic.py
tests/unit/: test_backlash.py  test_devices.py  test_imperfections.py  test_model.py  test_protocol.py  test_utils.py
